2004-08-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: permissions not displayed correctly on windows (again)

2004-08-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: PORT not working in IPv4 when compiled with IPv6

2004-07-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: user cache system moved to lib

2004-07-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: boostrap script should *really* work on all platforms
	* feature: mysql backend restarted (almost) from scratch, tables redesign
	* bugfix: some typos

2004-07-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: split ip addresses related functions to specific file
	* feature: new routine ip_compare
	* bugfix: login_pre_ip_allowed not working (missing \0) in ip_add

	* IMPORTANT: no more '+' or '-' in ip addresses

2004-07-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: print text file in custom site command
	* feature: site SU (Set Userid, steal someone's identity)
	* feature: event PREDOWNLOAD
	* feature: PREDOWNLOAD and PREUPLOAD scripts can deny upload
	* feature: site rusage can now read opened fd on linux 2.6
	* bugfix: vars_shm set not working in perl

	* IMPORTANT: from now, uid is NOT user's index in list

2004-07-05  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: typo in vars, used tagline instead of tag for group
	* cookies: %include(filename) includes and parses file contents
	* feature: added API for mutexes

2004-06-15  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: typo in siteconfig giving wrong pasv_range for 'get all'
	* bugfix: typo in pgsql.m4 displaying OpenSSL

2004-06-11  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: site_cmd not working (yeah, again)
	* bugfix: fixed SSL flags in backends and modules
	* doc: updated inline doc (fox doxygen)
	* feature: removed some unused structs to reduce memory use

2004-06-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: transfer duration gets better precision