@@ -3,6 +3,8 @@
 - use 'rats','splint', 'pscan' for security audit
 
 '********'
+- add config variables for data_buffer_length
+'********'
 - provide a socket registration interface to have ~ servers
 '********'
 - change 257 reply to allow customization, and force valid FTP reply
