@@ -25,7 +25,9 @@
 #ifndef __WZD_SERVER_THREAD__
 #define __WZD_SERVER_THREAD__
 
-extern wzd_sem_t limiter_sem;
+#include <wzd_mutex.h>
+
+extern wzd_mutex_t * limiter_mutex;
 extern time_t server_time;
 
 int runMainThread(int argc, char **argv);
